# skullstripping-ants

./: CMakeLists.txt  README  README.md  cmakeConfig.h.in
Testing/: masks.txt  t1s.txt  test.sh
lib/: learnImage.h  learnImage.hxx  linearInterp.h  linearInterp.hxx  utilities.h  utilities.hxx  utilitiesIO.h  utilitiesIO.hxx  utilitiesImage.h  utilitiesImage.hxx
multiAtlasANTS/: CMakeLists.txt  atlasSegANTS.h  atlasSegANTS.hxx  mainANTSAtlas.cxx  mainANTSAtlasWeightedOutputProbability.cxx
scripts/: compute_all_transforms.sh.in  compute_transform.sh.in
